samples/_failures_safe/1761043464_b6340a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee99f4f3.c: In function ‘main’:
./samples/SAFE/__tmp_ee99f4f3.c:150:16: error: missing terminating " character
  150 |         printf("Decompression failed
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ee99f4f3.c:150:9: error: expected expression at end of input
  150 |         printf("Decompression failed
      |         ^~~~~~
./samples/SAFE/__tmp_ee99f4f3.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee99f4f3.c:150:9: error: expected declaration or statement at end of input
